fixed student list wrap

--- a/src/styles/housingcontainer.scss
+++ b/src/styles/housingcontainer.scss
@@ -4,10 +4,13 @@
     width: 30%;
     height: 100%;
     position: absolute;
-    right: 25px;
+    right: 0px;
+    top: 155px;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    overflow: auto;
+    margin-left: 5px;
 
     li {
         list-style-type: none;
