--- a/src/styles/teststudent.scss
+++ b/src/styles/teststudent.scss
@@ -30,13 +30,16 @@
         background-position: center;
         background-size: cover;
         width: 175px;
-        margin-top: 8px;
-        margin-bottom: 8px;
+        margin-top: -10px;
         border-radius: 5px;
     }
     .btn-lg {
         padding: 0;
-        height: 265px;
+        height: 255px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 }
 .modal-title {
